Split GroupTest into multiple files
Part of: #34494

Signed-off-by: Simon Vacek <simonvacky@email.cz>